<resources>
    <string name="app_name">GoogleMaps1</string>
    <string name="title_activity_maps">GoogleMap1</string>
    <string name="title_activity_markers">Markers</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="map_ui_my_location_button_click_toast_message">Updating current position</string>

    <string name="permission_rationale_title">Access Fine Location</string>
    <string name="permission_rationale_message">You need to grant this permission for application access to your location and ability to show it on map.</string>

    <string name="new_marker_dialog_add_marker_button">Add</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="new_marker_dialog_title">Create new Marker</string>
    <string name="new_marker_dialog_key_marker_title">Title:</string>
    <string name="new_marker_dialog_marker_title_hint">markerInfo title</string>
    <string name="new_marker_dialog_key_marker_icon_title">Marker icon:</string>
    <string name="new_marker_dialog_red_color_marker">Red</string>
    <string name="new_marker_dialog_orange_color_marker">Orange</string>
    <string name="new_marker_dialog_yellow_color_marker">Yellow</string>
    <string name="new_marker_dialog_green_color_marker">Green</string>
    <string name="new_marker_dialog_cyan_color_marker">Cyan</string>
    <string name="new_marker_dialog_azure_color_marker">Azure</string>
    <string name="new_marker_dialog_blue_color_marker">Blue</string>
    <string name="new_marker_dialog_violet_color_marker">Violet</string>
    <string name="new_marker_dialog_magenta_color_marker">Magenta</string>
    <string name="new_marker_dialog_rose_color_marker">Rose</string>
    <string name="marker_info_options">info and options</string>
    <string name="marker_dialog_edit_button">Edit</string>
    <string name="marker_dialog_delete_button">Delete</string>
    <string name="edit_marker_dialog_title">Edit Marker</string>
    <string name="marker_dialog_save_marker_button">Save</string>
    <string name="control_change_map_type">Change map type</string>
    <string name="map_type_dialog_title">Select Map Type</string>
    <string name="map_type_normal">Road Map</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="new_marker_dialog_color_marker">Color marker</string>
    <string name="start_markers_generation">Start markers generation</string>
    <string name="delete_all_markers_from_db">delete all markers from DB</string>
    <string name="config_build_flavors_error">Verify your Config and ConfigBuildFlavors file for correct selection of Build Flavor.</string>

</resources>
